--- a/notations/json/index.html
+++ b/notations/json/index.html
@@ -329,33 +329,33 @@ class Notation {
 ////////////////////////////////////
 
 var defaults = {
-  //NASDAQ
-  "NASDAQ:AAPL": { name: "Apple" },
-  "NASDAQ:GOOGL": { name: "Google" },
-  "NASDAQ:MSFT": { name: "Microsoft" },
-  "NASDAQ:FB": { name: "Facebook" },
-  "NASDAQ:AMZN": { name: "Amazon" },
-  "NASDAQ:INTC": { name: "Intel" },
-  "NASDAQ:SBUX": { name: "Starbucks" },
-  "NASDAQ:ADBE": { name: "Adobe" },
-  "NASDAQ:PYPL": { name: "PayPal" },
-  "NASDAQ:NFLX": { name: "Netflix" },
-  "NASDAQ:TSLA": { name: "Tesla" },
-  "NASDAQ:EBAY": { name: "Ebay" },
-  "NASDAQ:ATVI": { name: "Blizzard" },
-  "NASDAQ:EA": { name: "EA" },
-  "NASDAQ:NVDA": { name: "Nvidia" },
-  "NASDAQ:TTWO": { name: "Take Two" },
-  "NASDAQ:AVID": { name: "Avid" },
-  "NASDAQ:AMCX": { name: "AMC" },
-  "NASDAQ:DISCA": { name: "Discovery" },
-  "NASDAQ:ERIC": { name: "Ericsson" },
-  "NASDAQ:TEAM": { name: "Atlassian" },
-  "NASDAQ:GRMN": { name: "Garmin" },
-  "NASDAQ:LOGI": { name: "Logitech" },
-  "NASDAQ:CRSP": { name: "Crispr" },
-  "NASDAQ:IRBT": { name: "iRobot" },
-  "NASDAQ:DBX": { name: "Dropbox" },
+  //NASD
+  "NASD:AAPL": { name: "Apple" },
+  "NASD:GOOGL": { name: "Google" },
+  "NASD:MSFT": { name: "Microsoft" },
+  "NASD:FB": { name: "Facebook" },
+  "NASD:AMZN": { name: "Amazon" },
+  "NASD:INTC": { name: "Intel" },
+  "NASD:SBUX": { name: "Starbucks" },
+  "NASD:ADBE": { name: "Adobe" },
+  "NASD:PYPL": { name: "PayPal" },
+  "NASD:NFLX": { name: "Netflix" },
+  "NASD:TSLA": { name: "Tesla" },
+  "NASD:EBAY": { name: "Ebay" },
+  "NASD:ATVI": { name: "Blizzard" },
+  "NASD:EA": { name: "EA" },
+  "NASD:NVDA": { name: "Nvidia" },
+  "NASD:TTWO": { name: "Take Two" },
+  "NASD:AVID": { name: "Avid" },
+  "NASD:AMCX": { name: "AMC" },
+  "NASD:DISCA": { name: "Discovery" },
+  "NASD:ERIC": { name: "Ericsson" },
+  "NASD:TEAM": { name: "Atlassian" },
+  "NASD:GRMN": { name: "Garmin" },
+  "NASD:LOGI": { name: "Logitech" },
+  "NASD:CRSP": { name: "Crispr" },
+  "NASD:IRBT": { name: "iRobot" },
+  "NASD:DBX": { name: "Dropbox" },
   "NASD:GT": { name: "Goodyear" },
   "NASD:TXN": { name: "Texas Instruments" },
   "NASD:SBUX": { name: "Starbucks" },
@@ -365,7 +365,7 @@ var defaults = {
   "NASD:TRIP": { name: "TripAdvisor" },
   "NASD:GPRO": { name: "GoPro" },
   "NASD:FOXF": { name: "Fox" },
-  "NASD:NDAQ": { name: "Nasdaq" },
+  "NASD:NDAQ": { name: "NASD" },
   "NASD:SONO": { name: "Sonos" },
   "NASD:CSCO": { name: "Cisco" },
   "NASD:SPLK": { name: "Splunk" },
@@ -418,7 +418,7 @@ var defaults = {
   "NYSE:WWE": { name: "World Wrestling" },
   "NYSE:CAT": { name: "Caterpillar" },
   "NYSE:DE": { name: "John Deere" },
-  "NYSE:DT": { name: "Dynatrace", pinned: true },
+  "NYSE:DT": { name: "Dynatrace" },
   "NYSE:NEWR": { name: "New Relic" },
   "NYSE:ESTC": { name: "Elastic" },
 
@@ -440,38 +440,44 @@ var defaults = {
 
   //ETFs
   "NYSE:XLE": { name: "ETF Energy" },
-  "NYSE:NLR": { name: "ETF Nuclear" },
+  "NYSE:ICLN": { name: "ETF Energy Clean" },
+  "NYSE:TAN": { name: "ETF Energy Solar" },
+  "NYSE:FAN": { name: "ETF Energy Wind" },
+  "NYSE:NLR": { name: "ETF Energy Nuclear" },
+
   "NYSE:SLX": { name: "ETF Steel" },
   "NYSE:USO": { name: "ETF Oil" },
   "NYSE:KOL": { name: "ETF Coal" },
   "NYSE:FCG": { name: "ETF Gas" },
   "NYSE:SLV": { name: "ETF Silver" },
   "NYSE:GLD": { name: "ETF Gold" },
+  "NYSE:LIT": { name: "ETF Lithium" },
   "NYSE:PHO": { name: "ETF Water" },
   "NYSE:WOOD": { name: "ETF Timber" },
   "NYSE:STZ": { name: "ETF Alcohol" },
 
+  "NYSE:KBE": { name: "ETF Banks" },
+  "NYSE:CARZ": { name: "ETF Automotive" },
+  "NYSE:SEA": { name: "ETF Shipping" },
+  "NYSE:EVX": { name: "ETF Waste" },
+
   "NYSE:GDX": { name: "ETF Gold Miners" },
-  "NYSEARCA:JNUG": { name: "ETF Gold Miners 3x" },
+  "NYSE:JNUG": { name: "ETF Gold Miners 3x" },
+  "NYSE:NUGT": { name: "ETF Gold Miners -3x" },
 
-  "NYSE:VNQI": { name: "ETF REIT Non-US" },
+  "NYSE:RWO": { name: "ETF REIT Global" },
+  "NYSE:VNQI": { name: "ETF REIT ex-US" },
   "NYSE:SCHH": { name: "ETF REIT US" },
-  "NYSE:RWO": { name: "ETF REIT World" },
 
-  "NYSE:VT": { name: "ETF Broad World" },
-  "NYSEARCA:WDIV": { name: "ETF Broad World Divi" },
-  "NYSE:SDY": { name: "ETF Broad US Divi" },
-
-  //  "AMEX:IDHD": { name: "ETF World Divi" },
-  //  "NYSE:ITOT": { name: "ETF US Large Cap" },
-  //  "NYSE:SCHX": { name: "ETF US Large Cap" },
-  //  "NYSEARCA:NOBL": { name: "ETF US Large Cap" },
-  //  "NYSEARCA:SPY": { name: "ETF US Large Cap" },
-  //  "NYSEARCA:DVY": { name: "ETF US Large Cap Divi" },
-  //  "NYSEARCA:HDV": { name: "ETF US Large Cap Divi" },
-  //  "NYSEARCA:SDY": { name: "ETF US Large Cap Divi" },
-  //  "NYSE:VYM": { name: "ETF US Large Cap Divi" },
-  //  "NYSE:EEMO": { name: "ETF Emerging Large Cap" },
+  "NYSE:VT": { name: "ETF Geo Global" },
+  "NYSE:SDY": { name: "ETF Geo US" },
+  "NYSE:AFK": { name: "ETF Geo Africa" },
+  "NYSE:VGK": { name: "ETF Geo Europe" },
+  "NYSE:ILF": { name: "ETF Geo Latin America" },
+  "NYSE:GULF": { name: "ETF Geo Middle East" },
+  "NYSE:EWZ": { name: "ETF Geo Brazil" },
+  "NYSE:EZA": { name: "ETF Geo South Africa" },
+  "NYSE:EWJ": { name: "ETF Geo Japan" }
 
 };
 var metadata = getObject("metadata", defaults);
