--- a/notations/index.html
+++ b/notations/index.html
@@ -1476,35 +1476,42 @@ var defaults = {
   "ATX:STR:208": { name: "Strabag" },
 
   //ETFs
+  "NYSE:SPY": { name: "ETF SP500" },
+  "NYSE:SPXL": { name: "ETF SP500 3x" },
+  "NYSE:SPXS": { name: "ETF SP500 -3x" },
+
   "NYSE:XLE": { name: "ETF Energy" },
   "NYSE:ICLN": { name: "ETF Energy Clean" },
   "NYSE:TAN": { name: "ETF Energy Solar" },
   "NYSE:FAN": { name: "ETF Energy Wind" },
   "NYSE:NLR": { name: "ETF Energy Nuclear" },
 
-  "NYSE:SLX": { name: "ETF Steel" },
-  "NYSE:USO": { name: "ETF Oil" },
-  "NYSE:KOL": { name: "ETF Coal" },
-  "NYSE:FCG": { name: "ETF Gas" },
-  "NYSE:SLV": { name: "ETF Silver" },
-  "NYSE:GLD": { name: "ETF Gold" },
-  "NYSE:LIT": { name: "ETF Lithium" },
-  "NYSE:PHO": { name: "ETF Water" },
-  "NYSE:WOOD": { name: "ETF Timber" },
-  "NYSE:STZ": { name: "ETF Alcohol" },
+  "NYSE:SLX": { name: "ETF Mat Steel" },
+  "NYSE:USO": { name: "ETF Mat Oil" },
+  "NYSE:KOL": { name: "ETF Mat Coal" },
+  "NYSE:FCG": { name: "ETF Mat Gas" },
+  "NYSE:CPER": { name: "ETF Mat Copper" },
+  "NYSE:SLV": { name: "ETF Mat Silver" },
+  "NYSE:GLD": { name: "ETF Mat Gold" },
+  "NYSE:LIT": { name: "ETF Mat Lithium" },
+  "NYSE:PALL": { name: "ETF Mat Palladium" },
+  "NYSE:PPLT": { name: "ETF Mat Platinum" },
+  "NYSE:PHO": { name: "ETF Mat Water" },
 
-  "NYSE:KBE": { name: "ETF Banks" },
-  "NYSE:CARZ": { name: "ETF Automotive" },
-  "NYSE:SEA": { name: "ETF Shipping" },
-  "NYSE:EVX": { name: "ETF Waste" },
+  "NYSE:GDX": { name: "ETF Mat Gold Miners" },
+  "NYSE:JNUG": { name: "ETF Mat Gold Miners 3x" },
+  "NYSE:JDST": { name: "ETF Mat Gold Miners -3x" },
 
-  "NYSE:GDX": { name: "ETF Gold Miners" },
-  "NYSE:JNUG": { name: "ETF Gold Miners 3x" },
-  "NYSE:NUGT": { name: "ETF Gold Miners -3x" },
+  "NYSE:WOOD": { name: "ETF Sec Timber" },
+  "NYSE:STZ": { name: "ETF Sec Alcohol" },
+  "NYSE:KBE": { name: "ETF Sec Banks" },
+  "NYSE:CARZ": { name: "ETF Sec Automotive" },
+  "NYSE:SEA": { name: "ETF Sec Shipping" },
+  "NYSE:EVX": { name: "ETF Sec Waste Mgmt" },
 
-  "NYSE:RWO": { name: "ETF REIT Global" },
-  "NYSE:VNQI": { name: "ETF REIT ex-US" },
-  "NYSE:SCHH": { name: "ETF REIT US" },
+  "NYSE:RWO": { name: "ETF Sec REIT Global" },
+  "NYSE:VNQI": { name: "ETF Sec REIT ex-US" },
+  "NYSE:SCHH": { name: "ETF Sec REIT US" },
 
   "NYSE:VT": { name: "ETF Geo Global" },
   "NYSE:SDY": { name: "ETF Geo US" },
