--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -520,32 +520,31 @@ var defaults = {
   "NYSE:FAN": { name: "ETF Energy Wind" },
   "NYSE:NLR": { name: "ETF Energy Nuclear" },
 
-  "NYSE:SLX": { name: "ETF Mat Steel" },
-  "NYSE:USO": { name: "ETF Mat Oil" },
-  "NYSE:KOL": { name: "ETF Mat Coal" },
-  "NYSE:FCG": { name: "ETF Mat Gas" },
-  "NYSE:CPER": { name: "ETF Mat Copper" },
-  "NYSE:SLV": { name: "ETF Mat Silver" },
-  "NYSE:GLD": { name: "ETF Mat Gold" },
-  "NYSE:LIT": { name: "ETF Mat Lithium" },
-  "NYSE:PALL": { name: "ETF Mat Palladium" },
-  "NYSE:PPLT": { name: "ETF Mat Platinum" },
-  "NYSE:PHO": { name: "ETF Mat Water" },
+  "NYSE:SLX": { name: "ETF Basic Steel" },
+  "NYSE:USO": { name: "ETF Basic Oil" },
+  "NYSE:KOL": { name: "ETF Basic Coal" },
+  "NYSE:FCG": { name: "ETF Basic Gas" },
+  "NYSE:CPER": { name: "ETF Basic Copper" },
+  "NYSE:SLV": { name: "ETF Basic Silver" },
+  "NYSE:GLD": { name: "ETF Basic Gold" },
+  "NYSE:LIT": { name: "ETF Basic Lithium" },
+  "NYSE:PALL": { name: "ETF Basic Palladium" },
+  "NYSE:PPLT": { name: "ETF Basic Platinum" },
+  "NYSE:PHO": { name: "ETF Basic Water" },
 
-  "NYSE:GDX": { name: "ETF Mat Gold Miners" },
-  "NYSE:JNUG": { name: "ETF Mat Gold Miners 3x" },
-  "NYSE:JDST": { name: "ETF Mat Gold Miners -3x" },
+  "NYSE:GDX": { name: "ETF Gold Miners" },
+  "NYSE:JNUG": { name: "ETF Gold Miners 3x" },
+  "NYSE:JDST": { name: "ETF Gold Miners -3x" },
 
-  "NYSE:WOOD": { name: "ETF Sec Timber" },
-  "NYSE:STZ": { name: "ETF Sec Alcohol" },
-  "NYSE:KBE": { name: "ETF Sec Banks" },
-  "NYSE:CARZ": { name: "ETF Sec Automotive" },
-  "NYSE:SEA": { name: "ETF Sec Shipping" },
-  "NYSE:EVX": { name: "ETF Sec Waste Mgmt" },
-
-  "NYSE:RWO": { name: "ETF Sec REIT Global" },
-  "NYSE:VNQI": { name: "ETF Sec REIT ex-US" },
-  "NYSE:SCHH": { name: "ETF Sec REIT US" },
+  "NYSE:WOOD": { name: "ETF Timber" },
+  "NYSE:STZ": { name: "ETF Alcohol" },
+  "NYSE:KBE": { name: "ETF Banks" },
+  "NYSE:CARZ": { name: "ETF Automotive" },
+  "NYSE:SEA": { name: "ETF Shipping" },
+  "NYSE:EVX": { name: "ETF Waste Mgmt" },
+  "NYSE:RWO": { name: "ETF REIT Global" },
+  "NYSE:VNQI": { name: "ETF REIT ex-US" },
+  "NYSE:SCHH": { name: "ETF REIT US" },
 
   "NYSE:VT": { name: "ETF Geo Global" },
   "NYSE:SDY": { name: "ETF Geo US" },
@@ -555,6 +554,7 @@ var defaults = {
   "NYSE:GULF": { name: "ETF Geo Middle East" },
   "NYSE:EWZ": { name: "ETF Geo Brazil" },
   "NYSE:EZA": { name: "ETF Geo South Africa" },
+  "NYSE:EWL": { name: "ETF Geo Switzerland" },
   "NYSE:EWJ": { name: "ETF Geo Japan" }
 
 };
