--- a/notations/config/index.html
+++ b/notations/config/index.html
@@ -475,6 +475,10 @@ var defaults = {
   "NYSE:VNQI": { name: "ETF REIT ex-US" },
   "NYSE:SCHH": { name: "ETF REIT US" },
 
+  "NYSE:URTH": { name: "ETF MSCI World" },
+  "NYSE:ACWI": { name: "ETF MSCI ACWI" },
+  "NYSE:ACWX": { name: "ETF MSCI ACWI ex-US" },
+
   "NYSE:VT": { name: "ETF Geo Global" },
   "NYSE:SDY": { name: "ETF Geo US" },
   "NYSE:AFK": { name: "ETF Geo Africa" },
