--- a/notations/index.html
+++ b/notations/index.html
@@ -2268,7 +2268,7 @@ class Notation {
   }
 
   getOutlinkUri(timeSpan) {
-    let uri = this.getFinvizUri(timeSpan);
+    let uri = this.getStockChartsUri(timeSpan);
     if (this.fallbackSymbol != "") {
       uri = this.aktienPortalUri;
     }
