--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -576,8 +576,8 @@ var defaults = {
   "NYSE:EZA": { name: "ETF Geo South Africa" },
   "NYSE:EWL": { name: "ETF Geo Switzerland" },
   "NYSE:EWJ": { name: "ETF Geo Japan" }
-
 };
+
 var metadata = getObject("metadata", defaults);
 
 function findNotations(query) {
@@ -598,6 +598,14 @@ function findNotations(query) {
     }
   }
   return notations;
+}
+
+function findAndSortNotations(query) {
+  return findNotations(query).sort(function(a, b) {
+    var ha = a.pinned;
+    var hb = b.pinned;
+    return ha && !hb ? -1 : (hb && !ha ? 1 : (a.name.toLowerCase().trim() > b.name.toLowerCase().trim() ? 1 : -1));
+  });
 }
 
 function getNotation(id) {
@@ -650,6 +658,7 @@ function deleteNotation(id) {
       setNotation(notation);
     }
 
+    //Configure header
     $("header h1 a:last-child").text(notation.name);
     //$("header nav ul").append('<li><a href="' + notation.analyzeUri + '" target="_blank">Analyze</a></li>');
     if (notation.pinned) {
