--- a/notations/config/index.html
+++ b/notations/config/index.html
@@ -505,8 +505,8 @@ var defaults = {
   "NYSE:EZA": { name: "ETF Geo South Africa" },
   "NYSE:EWL": { name: "ETF Geo Switzerland" },
   "NYSE:EWJ": { name: "ETF Geo Japan" }
-
 };
+
 var metadata = getObject("metadata", defaults);
 
 function findNotations(query) {
@@ -527,6 +527,14 @@ function findNotations(query) {
     }
   }
   return notations;
+}
+
+function findAndSortNotations(query) {
+  return findNotations(query).sort(function(a, b) {
+    var ha = a.pinned;
+    var hb = b.pinned;
+    return ha && !hb ? -1 : (hb && !ha ? 1 : (a.name.toLowerCase().trim() > b.name.toLowerCase().trim() ? 1 : -1));
+  });
 }
 
 function getNotation(id) {
